--- a/ansible/wordpress-nginx/roles/mariadb/templates/my.cnf.j2
+++ b/ansible/wordpress-nginx/roles/mariadb/templates/my.cnf.j2
@@ -5,6 +5,7 @@ user=mysql
 # Disabling symbolic-links is recommended to prevent assorted security risks
 symbolic-links=0
 port={{ mysql_port }}
+server-id={{ mysql_server_id}}
 
 [mysqld_safe]
 log-error=/var/log/mysqld.log
